<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imagemain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:onClick="weatherShow"
        android:id="@+id/Weather"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/Weather"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4A3E3D"
        android:textColorHighlight="#4A3E3D"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="notesShow"
        android:id="@+id/Notes"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/My_corgi"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4A3E3D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Map"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/rounded_corner"
        android:onClick="mapShow"
        android:text="@string/For_a_walk"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4A3E3D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="414dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="263dp"
        android:gravity="top"
        android:text="@string/what_do_you"
        android:textColor="#4A3E3D"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="410dp"
        android:layout_height="387dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/rectangle_1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/corgi_world"
        android:layout_width="253dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="283dp"
        android:layout_marginBottom="372dp"
        android:gravity="top"
        android:text="@string/corgi_world"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4A3E3D"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="199dp"
        android:layout_height="247dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="448dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rolling_eyes" />

</androidx.constraintlayout.widget.ConstraintLayout>