<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|left"
    android:background="@color/teal_200"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/ed_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/ed_desc"
        android:inputType="textMultiLine|textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTitle"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="onClickSave"
        app:layout_constraintBottom_toBottomOf="@+id/edDesc"
        app:layout_constraintEnd_toEndOf="@+id/edDesc"
        app:srcCompat="@drawable/ic_save_foreground"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>